--- a/PastelWlsySdP/app.config
+++ b/PastelWlsySdP/app.config
@@ -1,10 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="PastelWlsySdP.Properties.Settings.PastelWslySConnectionString"
-            connectionString="Data Source=DESKTOP-419S313\SQLEXPRESS;Initial Catalog=PastelWslyS;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="PastelWlsySdP.Properties.Settings.PastelWslySConnectionString" connectionString="Data Source=DESKTOP-419S313\SQLEXPRESS;Initial Catalog=PastelWslyS;Integrated Security=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup></configuration>
